# School

./: .gitignore  README.md
Assembly/: assignment3.asm  assignment4.asm  assignment5.asm  system_includes.asm
Project Euler/: Core.java  CoreUtils.java  Euler.java  Problem1.java  Problem11.java  Problem12.java  Problem13.java  Problem17.java  Problem18.java  Problem2.java  Problem21.java  Problem3.java  Problem31.java  Problem4.java  Problem45.c  Problem5.java  Problem6.java  Problem67.java  Problem7.java  Problem8.java  Problem9.java  ProblemTemplate.java
Year 2 (2012-02 to 2014-06)/Assembly/: assignment3.asm
Year 2 (2012-02 to 2014-06)/Project Euler/: Problem1.java  Problem18.java  Problem3.java  Problem5.java  Problem8.java  ProblemTemplate.java
Year 2 (2012-02 to 2014-06)/Webshop/: README.md
Year 2 (2014-02 to 2014-06)/Project Euler/: .gitignore  CoreUtils.java  Problem11.java  Problem2.java  Problem25.java  Problem67.java  problem28.c
Year 2 (2014-02 to 2014-06)/Webshop/: README.md
Year 3 (2014-09 to 2015-02)/PHP/api/: api.php  (+4 more)
Year 3 (2014-09 to 2015-02)/c++/c++ sample user input assignment/: CMakeLists.txt  README.md
Year 3 (2014-09 to 2015-02)/c++/c++ sample user input assignment/include/: equation.h  exampleinput.h  main.h
Year 3 (2014-09 to 2015-02)/c++/c++ sample user input assignment/include/utils/: prompt.h  stringutils.h
Year 3 (2014-09 to 2015-02)/c++/c++ sample user input assignment/src/: equation.cpp  exampleinput.cpp  main.cpp
Year 3 (2014-09 to 2015-02)/c++/c++ sample user input assignment/src/utils/: prompt.cpp  stringutils.cpp
(+32 files in other folders)
